syntax = "proto3";
package tendermint.services.block.v1;

import "tendermint/types/block.proto";
import "tendermint/types/types.proto";

message GetByHeightRequest {
  // The height of the block requested.
  int64 height = 1;
}

message GetByHeightResponse {
  tendermint.types.BlockID block_id = 1;
  tendermint.types.Block   block    = 2;
}

// GetLatestHeightRequest - empty message since no parameter is required
message GetLatestHeightRequest {}

// GetLatestHeightResponse provides the height of the latest committed block.
message GetLatestHeightResponse {
  // The height of the latest committed block. Will be 0 if no data has been
  // committed yet.
  int64 height = 1;
}
